force-app/main/default/objects/SBQQ__Quote__c/fields/Current_User_Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Language_Code__c</fullName>
    <formula>CASE(
  Text($User.LanguageLocaleKey),
  &apos;en_US&apos;, &apos;English&apos;,
  &apos;pt_BR&apos;, &apos;Português (Brasil)&apos;,
  &apos;es&apos;, &apos;Español&apos;,
  &apos;Unknown&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Language Code</label>
    <type>Text</type>
</CustomField>