force-app/main/default/objects/SBQQ__Quote__c/fields/EditLinesFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>EditLinesFieldSetName__c</fullName>
    <formula>IF(
    ISPICKVAL(PMC_CPQ_Region__c, &apos;North America&apos;),
    IF(
    OR(
    RecordType.DeveloperName = &apos;PMC_CPQ_International&apos;,
    RecordType.DeveloperName = &apos;PMC_CPQ_InternationalDistribution&apos;
    ),
    &quot;PMC_CPQ_NAInternational&quot;
    ,
    &quot;PMC_CPQ_QLEDomesticNACoPr&quot;
    ),
    &quot;PMC_CPQ_QLEB2BDOMINTBRFERT&quot;
)</formula>
    <label>QLE Column Conditionality</label>
    <type>Text</type>
</CustomField>