force-app/main/default/objects/SBQQ__Quote__c/fields/FirstQuote__c.field-meta.xml
<CustomField>
    <fullName>FirstQuote__c</fullName>
    <externalId>true</externalId>
    <label>First Quote</label>
    <length>32</length>
    <type>Text</type>
</CustomField>