force-app/main/default/objects/SBQQ__Quote__c/fields/Get_Prices_Status__c.field-meta.xml
<CustomField>
    <fullName>Get_Prices_Status__c</fullName>
    <label>Get Prices Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Approval In Progress</fullName>
            </value>
            <value>
                <fullName>Elegible</fullName>
                <isActive>false</isActive>
                <label>Elegible</label>
            </value>
            <value>
                <fullName>Not Elegible</fullName>
                <isActive>false</isActive>
                <label>Not Elegible</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>