force-app/main/default/objects/SBQQ__Quote__c/fields/Get_Prices_Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Get_Prices_Status_Indicator__c</fullName>
    <description>PMC CPQ - GetPrices Status Indicator</description>
    <formula>CASE(
  Get_Prices_Status__c,
  &quot;In Progress&quot;, IMAGE(&quot;/img/loading.gif&quot;, &quot;Loading&quot;, 16, 16) &amp; &quot; &quot; &amp; $Label.PMC_CPQ_QuoteGetPriceStatus_InProgress,
&quot;Approval In Progress&quot;, IMAGE(&quot;/img/loading.gif&quot;, &quot;Loading&quot;, 16, 16) &amp; &quot; &quot; &amp; $Label.PMC_CPQ_QuoteGetPriceStatus_InProgress,
  &quot;Completed&quot;, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Completed&quot;, 16, 16) &amp; &quot; &quot; &amp; $Label.PMC_CPQ_QuoteGetPriceStatus_Completed,
  &quot;Failed&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Failed&quot;, 16, 16) &amp; &quot; &quot; &amp; $Label.PMC_CPQ_QuoteGetPriceStatus_Failed,
  &quot;&quot;
)</formula>
    <label>GetPrices Status</label>
    <type>Text</type>
</CustomField>