force-app/main/default/objects/SBQQ__Quote__c/fields/HeaderFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>HeaderFieldSetName__c</fullName>
    <formula>IF(
       ISPICKVAL(PMC_CPQ_Region__c, &apos;North America&apos;),
    &apos;PMC_CPQ_LineEditorNA&apos;,
    IF(NOT(ISPICKVAL( SBQQ__Type__c ,&apos;Amendment&apos;)),&apos;PMC_CPQ_LineEditorBR&apos;,&apos;PMC_CPQ_LineEditorBRAmendment&apos;)
    
     )</formula>
    <label>QLE Header Conditionality</label>
    <type>Text</type>
</CustomField>