force-app/main/default/objects/SBQQ__Quote__c/fields/ItemsWithNegativePriceAdjustment__c.field-meta.xml
<CustomField>
    <fullName>ItemsWithNegativePriceAdjustment__c</fullName>
    <description>Quantity of line items that have a negative price adjustment value.</description>
    <inlineHelpText>Quantity of line items that have a negative price adjustment value.</inlineHelpText>
    <label>Items With Negative Price Adjustment</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.PMC_CPQ_Discount__c</field>
        <operation>lessThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>