force-app/main/default/objects/SBQQ__Quote__c/fields/MD_QuoteName__c.field-meta.xml
<CustomField>
    <fullName>MD_QuoteName__c</fullName>
    <description>Quote name used in &apos;Carteira&apos; at Mosaic Direct Portal.</description>
    <formula>IF(
NOT(ISBLANK(SBQQ__MasterContract__r.SBQQ__Quote__r.Name)),
SBQQ__MasterContract__r.SBQQ__Quote__r.Name,
Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MD Quote Name</label>
    <type>Text</type>
</CustomField>