force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_AdditionalComments__c.field-meta.xml
<CustomField>
    <fullName>PMC_AdditionalComments__c</fullName>
    <description>GDASF-6700</description>
    <label>Additional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>