force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CLM_Agreed_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_Agreed_Guarantee__c</fullName>
    <description>Garantia Acordada</description>
    <label>Agreed Guarantee</label>
    <type>TextArea</type>
</CustomField>