force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CLM_CIF_ITINERARY__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_CIF_ITINERARY__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ROTEIRO CIF</description>
    <label>CIF Itinerary</label>
    <type>Checkbox</type>
</CustomField>