force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CLM_ContractCreated__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_ContractCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Created</label>
    <type>Checkbox</type>
</CustomField>