force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CLM_ContractURL__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_ContractURL__c</fullName>
    <description>This Field will store the URL of the Contract Document generated in DocuSign CLM</description>
    <label>Contract URL</label>
    <type>Url</type>
</CustomField>