force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CLM_CustomerSignatureStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_CustomerSignatureStatus__c</fullName>
    <label>Customer Signature Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>