force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CLM_DeadlineForFormalizingGuarantee__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_DeadlineForFormalizingGuarantee__c</fullName>
    <label>Deadline for formalizing Guarantee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>