force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CLM_Delivery__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_Delivery__c</fullName>
    <label>Delivery</label>
    <type>TextArea</type>
</CustomField>