force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CLM_DeliveryType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_DeliveryType__c</fullName>
    <label>Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Auto Acceptance</fullName>
            </value>
            <value>
                <fullName>Sign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>