force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CLM_DocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_DocumentNumber__c</fullName>
    <description>This field will store the contract document number</description>
    <formula>IF(TEXT(SBQQ__Type__c) &lt;&gt; &apos;Amendment&apos;,
SUBSTITUTE(Name,&quot;Q-&quot;,&quot;&quot;),
SUBSTITUTE(SBQQ__Opportunity2__r.SBQQ__AmendedContract__r.SBQQ__Quote__r.Name ,&quot;Q-&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Number</label>
    <type>Text</type>
</CustomField>