force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CLM_Evergreen_Contract__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_Evergreen_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evergreen Contract</label>
    <type>Checkbox</type>
</CustomField>