force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CLM_ExpirationTimeMinutesHour__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_ExpirationTimeMinutesHour__c</fullName>
    <description>This field will be solely used for the purpose of showing the expiration Time upto the definition of Hours and Minutes in the Quote Document</description>
    <formula>TRIM(LEFT(TEXT(PMC_CPQ_ExpirationTime__c) ,5))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ExpirationTimeMinutesHour</label>
    <type>Text</type>
</CustomField>