force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CLM_FOB_ACCREDITATION__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_FOB_ACCREDITATION__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CREDENCIAMENTO FOB</description>
    <label>FOB Accreditation</label>
    <type>Checkbox</type>
</CustomField>