force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CLM_Other_Freight_Terms__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_Other_Freight_Terms__c</fullName>
    <label>Other Freight Terms</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>