force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CLM_OtherRejectionReason__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_OtherRejectionReason__c</fullName>
    <description>This field will store the explanation for Rejection, when customer Rejects Quote and Reason is Other.
This will be populated through CLM</description>
    <label>Other Cancelled Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>