force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CLM_QuoteDocumentId__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_QuoteDocumentId__c</fullName>
    <description>This field on the Quote Header will be used to store the document id as it is in DocuSign CLM</description>
    <label>Quote Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>