force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CLM_QuoteDocumentName__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_QuoteDocumentName__c</fullName>
    <description>This field on the Quote Header will be used to store the Name of the Quote Document</description>
    <label>Quote Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>