force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CLM_RecipientorSignatureEmail__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_RecipientorSignatureEmail__c</fullName>
    <label>Recipient or Signature Email</label>
    <type>Email</type>
</CustomField>