force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CLM_RecipientorSignatureName__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_RecipientorSignatureName__c</fullName>
    <label>Recipient or Signature Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>