force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CLM_ResendContractDocument__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_ResendContractDocument__c</fullName>
    <description>This field will be used for backend purposes to enable the Toast Message services on the Quote record page based on DocuSign CLM workflow feedback</description>
    <label>Resend Contract Document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>