force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CLM_Services__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_Services__c</fullName>
    <description>This Field captures the Services</description>
    <label>Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>