force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CLM_Signer2Email__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_Signer2Email__c</fullName>
    <description>This field will be used to store the email of Signer 2 for the signature of international contracts</description>
    <label>Additional Signer Email</label>
    <type>Email</type>
</CustomField>