force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CLM_Signer2Name__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_Signer2Name__c</fullName>
    <description>This field will be used to store the name of Signer 2 for the signature of international contracts</description>
    <label>Additional Signer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>