force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CLM_TypeOfGuarantee__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_TypeOfGuarantee__c</fullName>
    <label>Type Of Guarantee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>