force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_AboveCeilingPrice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_AboveCeilingPrice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is checked if Sales Price + Freight &gt; Ceiling Price</description>
    <label>PMC_CPQ_AboveCeilingPrice</label>
    <type>Checkbox</type>
</CustomField>