force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_AccountCountry__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_AccountCountry__c</fullName>
    <description>Field to store Account Country</description>
    <label>Account Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>