force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_AccountCreditStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_AccountCreditStatus__c</fullName>
    <description>This field is created as a part of story to handle/store value of Account Credit Status for any Quote.</description>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Credit Status</label>
    <type>Text</type>
</CustomField>