force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_AccountManager__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_AccountManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field captures the Account manager for each quote</description>
    <inlineHelpText>Indicates the Account manager for the Quote</inlineHelpText>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>