force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_Addendum__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Addendum__c</fullName>
    <label>Addendum</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>