force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_AdvanceBilling__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_AdvanceBilling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate advance billing for Brazil quotes</description>
    <label>Advance Billing</label>
    <type>Checkbox</type>
</CustomField>