force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_AmendmentApprovalBackend__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_AmendmentApprovalBackend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Approval Backend</label>
    <type>Checkbox</type>
</CustomField>