force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_AmendmentIndicator__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_AmendmentIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Indicator</label>
    <type>Checkbox</type>
</CustomField>