force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ApprovalSubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ApprovalSubmissionDate__c</fullName>
    <description>Approval submission date/time is a backend field to capture the exact date/time of submission time to use it on last priced date</description>
    <label>Approval Submission Date</label>
    <type>DateTime</type>
</CustomField>