force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ApprovedStatusDuration__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ApprovedStatusDuration__c</fullName>
    <formula>IF( ISPICKVAL(SBQQ__Status__c , &quot;Approved&quot;) &amp;&amp; NOT( ISBLANK(  PMC_CPQ_QuoteInApprovedStatusTime__c ) ) , TEXT(ROUND(  PMC_CPQ_PriorApprovedStatusDuration__c  +((NOW() - PMC_CPQ_QuoteInApprovedStatusTime__c)*24),1))&amp;&apos; Hours&apos; , TEXT( PMC_CPQ_PriorApprovedStatusDuration__c ) &amp;&apos; Hours&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Status Duration</label>
    <type>Text</type>
</CustomField>