force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_AutoApprovedToggle__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_AutoApprovedToggle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>toggle checkbox to validate a quote is auto approved through screenflow</description>
    <label>Auto Approved Toggle</label>
    <type>Checkbox</type>
</CustomField>