force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_BelowFloorHighFloor__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_BelowFloorHighFloor__c</fullName>
    <label>Below Floor High  Floor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>