force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_BelowFloorLowNUP__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_BelowFloorLowNUP__c</fullName>
    <label>Below Floor Low NUP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>