force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_BetweenTFHighNUP__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_BetweenTFHighNUP__c</fullName>
    <label>Between T &amp; F High NUP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>