force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_BillToAccount__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_BillToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as part of GDASF-2983. This field will take only Accounts that are of type Bill To.</description>
    <inlineHelpText>Account to which this shall be billed to</inlineHelpText>
    <label>Bill To Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Bill-to</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Bill To Account)</relationshipLabel>
    <relationshipName>BillToQuotes</relationshipName>
    <type>Lookup</type>
</CustomField>