force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_BRPerformanceDiscountLevel3__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_BRPerformanceDiscountLevel3__c</fullName>
    <label>BR Performance Discount Level3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>