force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_BusinessTypeFeed__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_BusinessTypeFeed__c</fullName>
    <formula>PMC_CPQ_PrimaryBusinessType__c =&apos;Feed&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Type Feed</label>
    <type>Checkbox</type>
</CustomField>