force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_CLIAutomationProcessed__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CLIAutomationProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Back end field to indicate the quote has been accepted and went through the Contract Line Items creation process</description>
    <label>CLI Automation Processed</label>
    <type>Checkbox</type>
</CustomField>