force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_CLMContractStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CLMContractStatus__c</fullName>
    <description>This field is created as a part of story to handle/store value of CLM Contract Status for any Quote.</description>
    <formula>&quot;True&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CLM Contract Status</label>
    <type>Text</type>
</CustomField>