force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ClonedQuoteFlowBypassLogic__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ClonedQuoteFlowBypassLogic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created this flag to bypass Quote Flows logic when a Quote is cloned with related</description>
    <label>Cloned Quote Flow Bypass Logic(Backend)</label>
    <type>Checkbox</type>
</CustomField>