force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_CommercialTradingQuote__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CommercialTradingQuote__c</fullName>
    <label>Commercial/Trading Quote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Trading Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>