force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_CommissionAgent__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CommissionAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to Comission Agent.</description>
    <label>Commission Agent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Agent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CPQ Quotes (Commission Agent)</relationshipLabel>
    <relationshipName>PMC_CPQ_CommissionAgent</relationshipName>
    <type>Lookup</type>
</CustomField>