force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_Competitor__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Competitor__c</fullName>
    <description>Field to hold the competitor&apos;s information</description>
    <label>Competitor</label>
    <type>TextArea</type>
</CustomField>