force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_CompetitorProduct__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CompetitorProduct__c</fullName>
    <description>To hold the information of the competitor&apos;s product</description>
    <label>Competitor Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>