force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ContactEmail__c</fullName>
    <description>This field is created as a part of story to handle/store value of Contact Email for any Quote.</description>
    <formula>PMC_CPQ_PrimaryContact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>