force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ContactPhone__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ContactPhone__c</fullName>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>