force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_Contract__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>CPQ_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>