force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_Contracted__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Contracted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created as a part of story to make contracts for Line Items of Quote.</description>
    <label>Contracted</label>
    <type>Checkbox</type>
</CustomField>