force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ContractLanguage__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ContractLanguage__c</fullName>
    <description>If region is North America, then English, else if region is Brazil, then ask Account Manager to select Spanish or Portuguese</description>
    <label>Output Document Language</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PMC_CPQ_Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>