force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ContractPeriod__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ContractPeriod__c</fullName>
    <description>This field calculate number of months between contract start and end date.</description>
    <formula>((YEAR(PMC_CPQ_ContractEnd__c) - YEAR(PMC_CPQ_ContractStart__c))*12) + (MONTH(PMC_CPQ_ContractEnd__c) - MONTH(PMC_CPQ_ContractStart__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>