force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ContractShippingInstructions__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ContractShippingInstructions__c</fullName>
    <description>Shipping Instructions</description>
    <label>Shipping Instructions</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>